<resources>
    <string name="app_name">BumpChat</string>
    <string name="action_settings">Settings</string>
    <string name="explanation">Imma Text!</string>
    <string name="nfc_disabled">NFC is disabled.</string>
    <string name="nfc_read_label">NFC Content:</string>
    <string name="chat_user_icon">Chat user icon</string>
    <string name="send_message">Send message</string>
    <string name="send_message_description">SEND_MESSAGE</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="title_activity_login">Unlock</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Unlock database</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="save_contact">Save Contact</string>
    <string name="contact_sync_status">Contact sync status</string>
    <string name="new_contact">New Contact</string>
    <string name="pairing_instructions">Place phones together back to back in NFC range. Alternate beaming messages until both devices have sent keys and verified partner\'s receipt.</string>
    <string name="keys_received">Keys received from partner</string>
    <string name="keys_sent">Keys sent to partner</string>
    <string name="keys_verified">Partner verified keys receipt</string>
    <string name="pairing_keys_generated">Secure keys generated</string>
    <string name="inbox_created">Inbox created on server</string>
    <string name="introduction">Set your Master password below. This is used to encrypt the database on this device. Do not forget this password as it cannot be reset.</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="set_master_password">Set Master Password</string>
    <string name="min_char_length">Min. length 12 characters</string>
    <string name="clear_history">Clear History</string>
    <string name="delete_contacts">Delete contacts</string>
    <string name="trash_button">Trash button</string>
</resources>
